--- a/publiccms-by-gradle/WebContent/WEB-INF/admin/sysSite/add.html
+++ b/publiccms-by-gradle/WebContent/WEB-INF/admin/sysSite/add.html
@@ -7,7 +7,7 @@ function siteDefaultConfig${id!}(){
 	if($('input[name=useSsi]',navTab.getCurrentPanel()).is(":checked")){
 		$('input[name=useSsi]',navTab.getCurrentPanel()).click();
 	}
-	$('input[name=sitePath]',navTab.getCurrentPanel()).val("${base}/web/");
+	$('input[name=sitePath]',navTab.getCurrentPanel()).val("${base}/webfile/");
 	$('input[name=dynamicPath]',navTab.getCurrentPanel()).val("${base}/");
 	<#if !a??>
 		$('input[name=domainName]',navTab.getCurrentPanel()).val("${base?keep_after('//')?keep_before('/')?keep_before(':')}");
